<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- CHECK BOX  -->

    <!-- Pergunta 13 -->
    <TextView
        style="@style/perguntas"
        android:text="@string/africaDoSulPergunta" />

    <CheckBox
        android:id="@+id/africaDoSul_RespA"
        style="@style/check"
        android:layout_marginTop="8dp"
        android:text="@string/africaDoSulRespA" />

    <CheckBox
        android:id="@+id/africaDoSul_RespB"
        style="@style/check"
        android:text="@string/africaDoSulRespB" />

    <CheckBox
        android:id="@+id/africaDoSul_RespC"
        style="@style/check"
        android:text="@string/africaDoSulRespC" />

    <CheckBox
        android:id="@+id/africaDoSul_RespD"
        style="@style/check"
        android:text="@string/africaDoSulRespD" />

    <CheckBox
        android:id="@+id/africaDoSul_RespE"
        style="@style/check"
        android:text="@string/africaDoSulRespE" />

    <!-- Pergunta 14 -->
    <TextView
        style="@style/perguntas"
        android:layout_marginTop="8dp"
        android:text="@string/gerogiaPergunta" />

    <CheckBox
        android:id="@+id/georgia_RespA"
        style="@style/check"
        android:text="@string/gerogiaRespA" />

    <CheckBox
        android:id="@+id/georgia_RespB"
        style="@style/check"
        android:text="@string/gerogiaRespB" />

    <CheckBox
        android:id="@+id/georgia_RespC"
        style="@style/check"
        android:text="@string/gerogiaRespC" />

    <CheckBox
        android:id="@+id/georgia_RespD"
        style="@style/check"
        android:text="@string/gerogiaRespD" />

    <CheckBox
        android:id="@+id/georgia_RespE"
        style="@style/check"
        android:layout_marginBottom="8dp"
        android:text="@string/gerogiaRespE" />

    <!-- Pergunta 15 -->
    <TextView
        style="@style/perguntas"
        android:layout_marginTop="8dp"
        android:text="@string/boliviaPergunta" />

    <CheckBox
        android:id="@+id/bolivia_RespA"
        style="@style/check"
        android:text="@string/boliviaRespA" />

    <CheckBox
        android:id="@+id/bolivia_RespB"
        style="@style/check"
        android:text="@string/boliviaRespB" />

    <CheckBox
        android:id="@+id/bolivia_RespC"
        style="@style/check"
        android:text="@string/boliviaRespC" />

    <CheckBox
        android:id="@+id/bolivia_RespD"
        style="@style/check"
        android:text="@string/boliviaRespD" />

    <CheckBox
        android:id="@+id/bolivia_RespE"
        style="@style/check"
        android:layout_marginBottom="8dp"
        android:text="@string/boliviaRespE" />
</merge>
